# grpc_testing

./: Dockerfile  Makefile  README.md  calculator.proto  calculator_pb2.py  calculator_pb2_grpc.py  client.py  docker-compose.yml  pyproject.toml  server.py
features/: calculator.feature
features/steps/: calculator_steps.py
tests/e2e/: test_calculator_e2e.py
tests/integration/: test_calculator_integration.py
tests/unit/: test_calculator_unit.py
